deleteEnrollment api
