# gardabook-services/api/swagger.yaml
@@ -585,7 +585,7 @@ paths:
       tags:
       - "enrollment"
       summary: "Find enrollment by user id"
-      description: "Returns enrollment list of te user"
+      description: "Returns enrollment list of the user"
       operationId: "getUserEnrollment"
       produces:
       - "application/xml"
@@ -679,6 +679,37 @@ paths:
       x-security-scopes:
       - "write:enrollment"
       - "read:enrollment"
+      x-swagger-router-controller: "Enrollment"
+    delete:
+      tags:
+      - "enrollment"
+      summary: "Delete the enrollment"
+      description: "For valid response try integer IDs with positive integer value.\
+        \         Negative or non-integer values will generate API errors"
+      operationId: "deleteEnrollment"
+      produces:
+      - "application/xml"
+      - "application/json"
+      parameters:
+      - name: "x-int-role"
+        in: "header"
+        required: true
+        type: "string"
+        default: "delete"
+      - name: "enrollmentId"
+        in: "path"
+        description: "ID of the enrollment that needs to be deleted"
+        required: true
+        type: "string"
+      responses:
+        400:
+          description: "Invalid ID supplied"
+        404:
+          description: "Order not found"
+      security:
+      - Bearer: []
+      x-security-scopes:
+      - "write:enrollment"
       x-swagger-router-controller: "Enrollment"
 securityDefinitions:
   Bearer:
